# coms

./: .coveralls.yml  .gitignore  .gitmodules  .travis.ci  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  entrypoint.sh  health-check.sh  pakcage.xml  requirements-dev.txt  setup.py
coms/: CMakeLists.txt  coms.toml  package.xml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
coms/launch/: map_merger.launch  net.launch  test_maphandler.launch  test_mapmerge.launch
coms/msg/: nearby.msg
coms/scripts/: net.py
coms/src/compression/: quadtree.py  rle.py
coms/src/coms/: __init__.py  constants.py  message.py  server.py  sim.py  utils.py
coms/src/mapmerge/: __init__.py  constants.py  hough_merge.py  keypoint_merge.py  merge_utils.py  readme.md  ros_utils.py  service.py
coms/src/msg/: __init__.py  merge.py  message.py  ping.py  utils.py
coms/src/nodes/: gmapping_merger.py  map_debugger.py  mapmerger.py  merge_handler.py  merger.py  netsim_merger.py  test_amcl.py  test_gmapping.py
coms/srv/: MergeMap.srv  TriggerMerge.srv
coms/tests/: test_compression.py  test_consensus.py  test_mapmerge.py  test_merge.py  test_ping.py  test_server.py  test_sim.py  test_utils.py
coms/tests/test_data/: README.md  local1.npy  local2.npy  map_0.npy  map_1.npy  map_2.npy  map_3.npy  map_4.npy  map_5.npy  map_6.npy  map_7.npy  map_8.npy  old_map0.npy  old_map2.npy  old_map3.npy  old_map4.npy  old_map5.npy  old_map6.npy  old_map7.npy  old_map8.npy  other1.npy  other2.npy
launch/: net.launch
scripts/: main.py  (+1 more)
(+30 files in other folders)
